fix overflow error in css

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{width:100%;overflow-x:100%;}
+body{width:100%;overflow-x:hidden;}
 
 h2{
   text-align:center;
